; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_gcJson.c_gcWriteTargetStartJson.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_gcJson.c_gcWriteTargetStartJson.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JsonObjStt = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"refId\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"target\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"datapoints\00", align 1
@JsonArrStt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gcWriteTargetStartJson(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = call i64 @strlen(i8* %7)
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  store i8* %11, i8** %6, align 8
  br label %12

12:                                               ; preds = %10, %3
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @httpJsonItemToken(i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @JsonObjStt, align 4
  %17 = call i32 @httpJsonToken(i32* %15, i32 %16)
  %18 = load i32*, i32** %4, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = call i64 @strlen(i8* %20)
  %22 = trunc i64 %21 to i32
  %23 = call i32 @httpJsonPair(i32* %18, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 5, i8* %19, i32 %22)
  %24 = load i32*, i32** %4, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i64 @strlen(i8* %26)
  %28 = trunc i64 %27 to i32
  %29 = call i32 @httpJsonPair(i32* %24, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 6, i8* %25, i32 %28)
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @httpJsonPairHead(i32* %30, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32 10)
  %32 = load i32*, i32** %4, align 8
  %33 = load i32, i32* @JsonArrStt, align 4
  %34 = call i32 @httpJsonToken(i32* %32, i32 %33)
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @httpJsonItemToken(i32*) #1

declare dso_local i32 @httpJsonToken(i32*, i32) #1

declare dso_local i32 @httpJsonPair(i32*, i8*, i32, i8*, i32) #1

declare dso_local i32 @httpJsonPairHead(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
